--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,12 @@ repository = "https://github.com/jihchi/kq.git"
 license-file = "LICENSE"
 keywords = ["kdl", "query", "transform", "config", "document"]
 
+[dev-dependencies]
+assert_cmd = "2.0.2"
+predicates = "2.0.3"
+indoc = "1.0.3"
+
 [dependencies]
-kdl = "1.1.0"
+kdl = "3.0.0"
 nom = "7.0.0"
 getopts = "0.2"
