--- a/kq/Cargo.toml
+++ b/kq/Cargo.toml
@@ -15,6 +15,6 @@ predicates = "2.0.3"
 indoc = "1.0.3"
 
 [dependencies]
-kdl = "3.0.0"
-nom = "7.0.0"
+kdl = "5.0.0-alpha.1"
+miette = "5.7.0"
 getopts = "0.2"
